# MPointer

./: CMakeLists.txt  DoubleLinkedList.cpp  DoubleLinkedList.h  DoubleNode.cpp  DoubleNode.h  LinkedList.cpp  LinkedList.h  MPointer.h  MPointerGC.cpp  MPointerGC.h  Node.cpp  Node.h  main.cpp
Client/: CMakeLists.txt  DoubleLinkedList.cpp  DoubleLinkedList.h  DoubleNode.cpp  DoubleNode.h  LinkedList.cpp  LinkedList.h  MPointer.cpp  MPointer.h  MPointerGC.cpp  MPointerGC.h  MPointer_init.cpp  MPointer_init.h  Node.cpp  Node.h  main.cpp
Server/: main.cpp
